fix: wrong height for comment input

--- a/src/app/bug-details/bug-details.component.scss
+++ b/src/app/bug-details/bug-details.component.scss
@@ -125,7 +125,7 @@
 }
 
 .new-comment-text-area {
-  height: 11;
+  height: 11em;
 }
 
 .actions {
